Улучшает резиновость слайдера

--- a/src/index.html
+++ b/src/index.html
@@ -125,13 +125,14 @@
                 </button>
             </div>
             <div class="main-slider__product">
-                <div class="product__text-info">
-                    <h2 class="product__name">Velit aliquet sagittis id consectetur</h2>
-                    <a href="#" class="product__more">Подробнее</a>
-                </div>
-                <div class="product__decorative-block"></div>
-                <div class="product__imgs">
+                <div class="product__info">
+                    <div class="product__info--text">
+                        <h2 class="product__name">Velit aliquet sagittis id consectetur</h2>
+                        <a href="#" class="product__more">Подробнее</a>
+                    </div>
                     <img src="./assets/img/product-preview.webp" alt="Товар." class="product__img--preview" width="261px" height="212px">
+                </div>
+                <div class="product__decorative-block">
                     <img src="./assets/img/product-decorative.webp" alt="Пример использования товара." class="product__img--decorative">
                 </div>
             </div>
@@ -181,14 +182,14 @@
             </div>
         </section>
 
-        <section class="main-catalog">
+        <!-- <section class="main-catalog">
             <h2 class="main-catalog__title">Каталог товаров</h2>
             <ul class="main-catalog__list">
                 <li class="main-catalog__item">
                     <h3 class="main-catalog__name"><a href="#">Филлеры</a></h3>
                 </li>
             </ul>
-        </section>
+        </section> -->
     </main>
 
 </body>
