Добавляет верстку блока с брендами

--- a/src/index.html
+++ b/src/index.html
@@ -240,19 +240,19 @@
 
         <section class="main-categories">
             <h2 class="visually-hidden">Категории товаров</h2>
-            <div class="main-categories__tabs">
-                <ul class="main-categories__tabs__list">
-                    <li class="main-categories__tabs__item main-categories__tabs__item--active">Уход за лицом</li>
-                    <li class="main-categories__tabs__item">Уход за телом</li>
-                    <li class="main-categories__tabs__item">Инъекционные препараты</li>
+            <div class="main__tabs main__tabs--categories">
+                <ul class="main__tabs__list">
+                    <li class="main__tabs__item main__tabs__item--active">Уход за лицом</li>
+                    <li class="main__tabs__item">Уход за телом</li>
+                    <li class="main__tabs__item">Инъекционные препараты</li>
                 </ul>
-                <ul class="main-categories__tabs__list--secondary">
-                    <li class="main-categories__tabs__item--secondary">Кремы</li>
-                    <li class="main-categories__tabs__item--secondary">Капсулы</li>
-                    <li class="main-categories__tabs__item--secondary">Гели</li>
+                <ul class="main__tabs__list--secondary">
+                    <li class="main__tabs__item--secondary">Кремы</li>
+                    <li class="main__tabs__item--secondary">Капсулы</li>
+                    <li class="main__tabs__item--secondary">Гели</li>
                 </ul>
             </div>
-            <div class="main-categories__tabs__content">
+            <div class="main__tabs__content">
                 <ul class="main-categories__content__list">
                     <li class="main-categories__content__item">
                         <div class="main-categories__card">
@@ -689,6 +689,57 @@
                                 <div class="main-categories__card__stock">В наличии</div>
                             </div>
                         </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="main-brands">
+            <h2 class="main-brands__title">Наши бренды</h2>
+            <div class="main__tabs main__tabs--brands">
+                <ul class="main__tabs__list">
+                    <li class="main__tabs__item">Уход за лицом</li>
+                    <li class="main__tabs__item">Уход за телом</li>
+                    <li class="main__tabs__item main__tabs__item--active">Инъекционные препараты</li>
+                </ul>
+            </div>
+            <div class="main-brands__content">
+                <ul class="main-brands__content__list">
+                    <li class="main-brands__content__item">
+                        <img src="./assets/img/clinique.webp" alt="Логтип clinique." class="main-brands__content__img">
+                    </li>
+                    <li class="main-brands__content__item">
+                        <img src="./assets/img/nyx.webp" alt="Логтип nyx." class="main-brands__content__img">
+                    </li>
+                    <li class="main-brands__content__item">
+                        <img src="./assets/img/kanebo.webp" alt="Логтип kanebo." class="main-brands__content__img">
+                    </li>
+                    <li class="main-brands__content__item">
+                        <img src="./assets/img/artdeco.webp" alt="Логтип artdeco." class="main-brands__content__img">
+                    </li>
+                    <li class="main-brands__content__item">
+                        <img src="./assets/img/maxfactor.webp" alt="Логтип maxfactor." class="main-brands__content__img">
+                    </li>
+                    <li class="main-brands__content__item">
+                        <img src="./assets/img/joico.webp" alt="Логтип joico." class="main-brands__content__img">
+                    </li>
+                    <li class="main-brands__content__item">
+                        <img src="./assets/img/rimmel.webp" alt="Логтип rimmel." class="main-brands__content__img">
+                    </li>
+                    <li class="main-brands__content__item">
+                        <img src="./assets/img/bioderma.webp" alt="Логтип bioderma." class="main-brands__content__img">
+                    </li>
+                    <li class="main-brands__content__item">
+                        <img src="./assets/img/kapous.webp" alt="Логтип kapous." class="main-brands__content__img">
+                    </li>
+                    <li class="main-brands__content__item">
+                        <img src="./assets/img/syoss.webp" alt="Логтип syoss." class="main-brands__content__img">
+                    </li>
+                    <li class="main-brands__content__item">
+                        <img src="./assets/img/catrice.webp" alt="Логтип catrice." class="main-brands__content__img">
+                    </li>
+                    <li class="main-brands__content__item">
+                        <img src="./assets/img/caudalie.webp" alt="Логтип caudalie." class="main-brands__content__img">
                     </li>
                 </ul>
             </div>
