Заканчивает верстку основного контента главной страницы

--- a/src/index.html
+++ b/src/index.html
@@ -718,7 +718,8 @@
                         <img src="./assets/img/artdeco.webp" alt="Логтип artdeco." class="main-brands__content__img">
                     </li>
                     <li class="main-brands__content__item">
-                        <img src="./assets/img/maxfactor.webp" alt="Логтип maxfactor." class="main-brands__content__img">
+                        <img src="./assets/img/maxfactor.webp" alt="Логтип maxfactor."
+                            class="main-brands__content__img">
                     </li>
                     <li class="main-brands__content__item">
                         <img src="./assets/img/joico.webp" alt="Логтип joico." class="main-brands__content__img">
@@ -742,6 +743,283 @@
                         <img src="./assets/img/caudalie.webp" alt="Логтип caudalie." class="main-brands__content__img">
                     </li>
                 </ul>
+            </div>
+        </section>
+
+        <section class="main-reviews">
+            <h2 class="main-reviews__title">Отзывы клиентов и мастеров</h2>
+            <ul class="main-reviews__list">
+                <li class="main-reviews__item">
+                    <div class="main-reviews__info">
+                        <img src="./assets/img/avatar.webp" alt="Аватар пользователя." class="main-reviews__avatar"
+                            width="80px" height="80px">
+                        <div class="main-reviews__info--user">
+                            <span class="main-reviews__username">Алиса</span>
+                            <span class="main-reviews__date">20.11.2021 в 16:43</span>
+                        </div>
+                        <img src="./assets/img/4stars.svg" alt="Оценка пользователя." class="main-reviews__grade">
+                    </div>
+                    <div class="main-reviews__text-content">
+                        Quis commodo odio aenean sed. Ac felis donec et odio pellentesque diam volutpat commodo. Ut enim
+                        blandit volutpat maecenas volutpat blandit. Amet facilisis magna etiam tempor orci eu. Egestas
+                        tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla. Eleifend quam adipiscing
+                        vitae proin sagittis nisl rhoncus. Tempus iaculis urna id volutpat lacus laoreet non curabitur
+                        gravida. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras.
+                    </div>
+                </li>
+                <li class="main-reviews__item">
+                    <div class="main-reviews__info">
+                        <img src="./assets/img/avatar.webp" alt="Аватар пользователя." class="main-reviews__avatar">
+                        <div class="main-reviews__info--user">
+                            <span class="main-reviews__username">Алиса</span>
+                            <span class="main-reviews__date">20.11.2021 в 16:43</span>
+                        </div>
+                        <img src="./assets/img/4stars.svg" alt="Оценка пользователя." class="main-reviews__grade">
+                    </div>
+                    <div class="main-reviews__text-content">
+                        Quis commodo odio aenean sed. Ac felis donec et odio pellentesque diam volutpat commodo. Ut enim
+                        blandit volutpat maecenas volutpat blandit. Amet facilisis magna etiam tempor orci eu. Egestas
+                        tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla. Eleifend quam adipiscing
+                        vitae proin sagittis nisl rhoncus. Tempus iaculis urna id volutpat lacus laoreet non curabitur
+                        gravida. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras.
+                    </div>
+                </li>
+                <li class="main-reviews__item">
+                    <div class="main-reviews__info">
+                        <img src="./assets/img/avatar.webp" alt="Аватар пользователя." class="main-reviews__avatar">
+                        <div class="main-reviews__info--user">
+                            <span class="main-reviews__username">Алиса</span>
+                            <span class="main-reviews__date">20.11.2021 в 16:43</span>
+                        </div>
+                        <img src="./assets/img/4stars.svg" alt="Оценка пользователя." class="main-reviews__grade">
+                    </div>
+                    <div class="main-reviews__text-content">
+                        Quis commodo odio aenean sed. Ac felis donec et odio pellentesque diam volutpat commodo. Ut enim
+                        blandit volutpat maecenas volutpat blandit. Amet facilisis magna etiam tempor orci eu. Egestas
+                        tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla. Eleifend quam adipiscing
+                        vitae proin sagittis nisl rhoncus. Tempus iaculis urna id volutpat lacus laoreet non curabitur
+                        gravida. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras.
+                    </div>
+                </li>
+            </ul>
+            <a href="#" class="main-reviews__show-all">Все отзывы</a>
+        </section>
+
+        <section class="main-stock">
+            <h2 class="visually-hidden">Наши самые выгодные предложения.</h2>
+            <ul class="main-stock__list">
+                <li class="main-stock__item--special">
+                    <div class="main-stock__info--special">
+                        <span class="main-stock__name--special">Velit aliquet sagittis id consectetur</span>
+                        <img src="./assets/img/product-preview.webp" alt="Товар." class="main-stock__img--special"
+                            width="204px" height="172px">
+                    </div>
+                    <div class="main-stock__decorative--special">
+                        <img src="./assets/img/product-decorative.webp" alt="Пример использования товара."
+                            class="main-stock__img--special--decorative" width="632px" height="422px">
+                    </div>
+                </li>
+                <li class="main-stock__item">
+                    <img src="./assets/img/stock1.webp" alt="Товар." class="main-stock__img">
+                    <span class="main-stock__name">Egestas tellus rutrum tellus</span>
+                    <a href="#" class="main-stock__detail">Подробнее</a>
+                </li>
+                <li class="main-stock__item">
+                    <img src="./assets/img/stock2.webp" alt="Товар." class="main-stock__img">
+                    <span class="main-stock__name">Egestas tellus rutrum tellus</span>
+                    <a href="#" class="main-stock__detail">Подробнее</a>
+                </li>
+                <li class="main-stock__item">
+                    <img src="./assets/img/stock3.webp" alt="Товар." class="main-stock__img">
+                    <span class="main-stock__name">Egestas tellus rutrum tellus</span>
+                    <a href="#" class="main-stock__detail">Подробнее</a>
+                </li>
+                <li class="main-stock__item">
+                    <img src="./assets/img/stock4.webp" alt="Товар." class="main-stock__img">
+                    <span class="main-stock__name">Egestas tellus rutrum tellus</span>
+                    <a href="#" class="main-stock__detail">Подробнее</a>
+                </li>
+            </ul>
+        </section>
+
+        <section class="main-faq">
+            <h2 class="main-faq__title">Вопрос - ответ</h2>
+            <ul class="main-faq__list">
+                <li class="main-faq__item">
+                    <span class="main-faq__question">Tempus urna et pharetra pharetra massa.</span>
+                    <span class="main-faq__answer">Text text text text text text text.</span>
+                    <button class="main-faq__btn">
+                        <span class="visually-hidden">Показать ответ</span>
+                    </button>
+                </li>
+                <li class="main-faq__item main-faq__item--active">
+                    <span class="main-faq__question main-faq__question--active">Aenean euismod elementum nisi quis
+                        eleifend.</span>
+                    <span class="main-faq__answer main-faq__answer--active">Ullamcorper sit amet risus nullam. Curabitur
+                        gravida arcu ac tortor dignissim convallis. Sagittis aliquam malesuada bibendum arcu vitae
+                        elementum curabitur vitae nunc. Dignissim sodales ut eu sem integer vitae. Lobortis feugiat
+                        vivamus at augue eget arcu dictum varius. Vel pharetra vel turpis nunc eget lorem dolor.</span>
+                    <button class="main-faq__btn main-faq__btn--active">
+                        <span class="visually-hidden">Показать ответ</span>
+                    </button>
+                </li>
+                <li class="main-faq__item">
+                    <span class="main-faq__question">Nascetur ridiculus mus mauris vitae.</span>
+                    <span class="main-faq__answer">Text text text text text text text.</span>
+                    <button class="main-faq__btn">
+                        <span class="visually-hidden">Показать ответ</span>
+                    </button>
+                </li>
+                <li class="main-faq__item">
+                    <span class="main-faq__question">Gravida quis blandit turpis cursus in hac habitasse platea
+                        dictumst.</span>
+                    <span class="main-faq__answer">Text text text text text text text.</span>
+                    <button class="main-faq__btn">
+                        <span class="visually-hidden">Показать ответ</span>
+                    </button>
+                </li>
+                <li class="main-faq__item">
+                    <span class="main-faq__question">Morbi quis commodo odio aenean sed adipiscing diam donec.</span>
+                    <span class="main-faq__answer">Text text text text text text text.</span>
+                    <button class="main-faq__btn">
+                        <span class="visually-hidden">Показать ответ</span>
+                    </button>
+                </li>
+                <li class="main-faq__item">
+                    <span class="main-faq__question">Dui sapien eget mi proin sed libero enim sed.</span>
+                    <span class="main-faq__answer">Text text text text text text text.</span>
+                    <button class="main-faq__btn">
+                        <span class="visually-hidden">Показать ответ</span>
+                    </button>
+                </li>
+            </ul>
+        </section>
+
+        <section class="main-banner">
+            <div class="main-banner__content">
+                <div class="main-banner__wrapper">
+                    <h2 class="main-banner__title">Есть вопросы?</h2>
+                    <span class="main-banner__description">
+                        Задать их по номеру телефона +7 (495) 000-00-00
+                        или оставте свой номер телефона и наш специалист перезвонит вам через 15 минут
+                    </span>
+                </div>
+                <form action="#" class="main-banner__form">
+                    <label class="main-banner__tel-wrapper">
+                        <span class="visually-hidden">Введите ваш номер телефона.</span>
+                        <input type="text" class="main-banner__tel-input" placeholder="+7 ( _ _ _ ) _ _ _ - _ _ - _ _ "
+                            required>
+                    </label>
+                    <button type="submit" class="main-banner__btn">Отправить заявку</button>
+                    <label class="main-banner__checkbox-wrapper">
+                        <input type="checkbox" class="main-banner__checkbox visually-hidden" name="agreement" checked>
+                        <span class="main-banner__checkbox__mark"></span>
+                        <span class="main-banner__checkbox__text">
+                            Нажимая «Оставить завку», я соглашаюсь c обработкой
+                            персональных данных на условиях Политики конфиденциальности.
+                        </span>
+                    </label>
+                </form>
+                <div class="main-banner__img"></div>
+            </div>
+        </section>
+
+        <section class="main-news">
+            <h2 class="main-news__title">Новости и статьи</h2>
+            <div class="main-news__content">
+                <ul class="main-news__list--text">
+                    <li class="main-news__item--text">
+                        <span class="main-news__date">22.10.2021</span>
+                        <span class="main-news__name--text">Odio morbi quis commodo odio aenean sed adipiscing
+                            diam.</span>
+                    </li>
+                    <li class="main-news__item--text">
+                        <span class="main-news__date">22.10.2021</span>
+                        <span class="main-news__name--text">Pellentesque diam volutpat commodo sed egestas egestas
+                            fringilla phasellus faucibus.</span>
+                    </li>
+                    <li class="main-news__item--text">
+                        <span class="main-news__date">22.10.2021</span>
+                        <span class="main-news__name--text">Gravida rutrum quisque non tellus orci.</span>
+                    </li>
+                    <li class="main-news__item--text">
+                        <span class="main-news__date">22.10.2021</span>
+                        <span class="main-news__name--text">At elementum eu facilisis sed. Diam donec adipiscing
+                            tristique risus.</span>
+                    </li>
+                    <li class="main-news__item--text">
+                        <span class="main-news__date">22.10.2021</span>
+                        <span class="main-news__name--text">Odio morbi quis commodo odio aenean sed adipiscing diam.
+                        </span>
+                    </li>
+                    <li class="main-news__item--text">
+                        <span class="main-news__date">22.10.2021</span>
+                        <span class="main-news__name--text">Gravida rutrum quisque non tellus orci.</span>
+                    </li>
+                </ul>
+                <ul class="main-news__list">
+                    <li class="main-news__item">
+                        <img src="./assets/img/news1.webp" alt="Превью новости." class="main-news__img" width="328px"
+                            height="240px">
+                        <div class="main-news__textcontent">
+                            <span class="main-news__date">22.10.2021</span>
+                            <span class="main-news__name">Odio morbi quis commodo odio aenean sed adipiscing
+                                diam.</span>
+                            <span class="main-news__description">Turpis nunc eget lorem dolor sed viverra. Ipsum dolor
+                                sit amet consectetur adipiscing.</span>
+                            <a href="#" class="main-news__link">Читать полностью</a>
+                        </div>
+                    </li>
+                    <li class="main-news__item">
+                        <img src="./assets/img/news2.webp" alt="Превью новости." class="main-news__img" width="328px"
+                            height="240px">
+                        <div class="main-news__textcontent">
+                            <span class="main-news__date">22.10.2021</span>
+                            <span class="main-news__name">Odio morbi quis commodo odio aenean sed adipiscing
+                                diam.</span>
+                            <span class="main-news__description">Turpis nunc eget lorem dolor sed viverra. Ipsum dolor
+                                sit amet consectetur adipiscing.</span>
+                            <a href="#" class="main-news__link">Читать полностью</a>
+                        </div>
+                    </li>
+                    <li class="main-news__item">
+                        <img src="./assets/img/news3.webp" alt="Превью новости." class="main-news__img" width="328px"
+                            height="240px">
+                        <div class="main-news__textcontent">
+                            <span class="main-news__date">22.10.2021</span>
+                            <span class="main-news__name">Odio morbi quis commodo odio aenean sed adipiscing
+                                diam.</span>
+                            <span class="main-news__description">Turpis nunc eget lorem dolor sed viverra. Ipsum dolor
+                                sit amet consectetur adipiscing.</span>
+                            <a href="#" class="main-news__link">Читать полностью</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="main-textblock">
+            <div class="main-textblock--left">
+                Posuere ac ut consequat semper viverra nam libero justo. Elementum curabitur vitae nunc sed velit.
+                Natoque penatibus et magnis dis parturient montes nascetur ridiculus. Justo eget magna fermentum iaculis
+                eu non. Purus gravida quis blandit turpis cursus in hac habitasse. In fermentum posuere urna nec
+                tincidunt praesent semper feugiat nibh. Sed augue lacus viverra vitae congue. Tellus elementum sagittis
+                vitae et leo. At quis risus sed vulputate odio ut enim blandit. Eu tincidunt tortor aliquam nulla
+                facilisi cras fermentum odio eu. Sit amet nulla facilisi morbi tempus iaculis urna. Egestas diam in arcu
+                cursus euismod. Est ullamcorper eget nulla facilisi etiam dignissim. Nunc non blandit massa enim nec dui
+                nunc mattis enim. Purus viverra accumsan in nisl nisi. Tortor at risus viverra adipiscing at. Et
+                malesuada fames ac turpis egestas integer eget aliquet. Sed augue lacus viverra vitae congue eu.
+            </div>
+            <div class="main-textblock--right">
+                Posuere ac ut consequat semper viverra nam libero justo. Elementum curabitur vitae nunc sed velit.
+                Natoque penatibus et magnis dis parturient montes nascetur ridiculus. Justo eget magna fermentum iaculis
+                eu non. Purus gravida quis blandit turpis cursus in hac habitasse. In fermentum posuere urna nec
+                tincidunt praesent semper feugiat nibh. Sed augue lacus viverra vitae congue. Tellus elementum sagittis
+                vitae et leo. At quis risus sed vulputate odio ut enim blandit. Eu tincidunt tortor aliquam nulla
+                facilisi cras fermentum odio eu. Sit amet nulla facilisi morbi tempus iaculis urna. Egestas diam in arcu
+                cursus euismod. Est ullamcorper eget nulla facilisi etiam dignissim. Nunc non blandit massa enim nec dui
+                nunc mattis enim. Purus viverra accumsan in nisl nisi. Tortor at risus viverra adipiscing at. Et
+                malesuada fames ac turpis egestas integer eget aliquet. Sed augue lacus viverra vitae congue eu.
             </div>
         </section>
     </main>
