Делает косметические фиксы

--- a/src/index.html
+++ b/src/index.html
@@ -1270,9 +1270,6 @@
                             <li class="footer__item">
                                 <a href="#" class="footer__link">Эксофолианты</a>
                             </li>
-                            <li class="footer__item">
-                                <a href="#" class="footer__link">Эксофолианты</a>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -1293,6 +1290,7 @@
     <div class="decorative__img decorative__img--first"></div>
     <div class="decorative__img decorative__img--second"></div>
     <div class="decorative__img decorative__img--third"></div>
+    <div class="decorative__img decorative__img--fourth"></div>
 </body>
 
 </html>
