--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -116,7 +116,7 @@
                             </a>
                         </li>
                         <li class="user-navigation__item">
-                            <a href="#" class="user-navigation__link user-navigation__link--cart">
+                            <a href="basket.html" class="user-navigation__link user-navigation__link--cart">
                                 <span class="visually-hidden">Корзина.</span>
                             </a>
                         </li>
