--- a/src/pages/category.html
+++ b/src/pages/category.html
@@ -111,7 +111,7 @@
                     </ul>
                     <ul class="third-row__user-navigation">
                         <li class="user-navigation__item">
-                            <a href="#" class="user-navigation__link user-navigation__link--favorite">
+                            <a href="favorites.html" class="user-navigation__link user-navigation__link--favorite">
                                 <span class="visually-hidden">Избранное.</span>
                             </a>
                         </li>
